--- a/browser/src/index.css
+++ b/browser/src/index.css
@@ -113,8 +113,8 @@ h3 {
 h1 + p::first-letter {
   float: left;
   font-size: 4rem;
-  line-height: 0.65;
-  margin: 0.05em 0.1em 0 0;
+  line-height: 0.8;
+  margin: 0 0.1em 0 0;
 }
 
 h1 + p {
@@ -192,6 +192,9 @@ main {
         #070710 100%
       )
       fixed;
+  }
+  h1 + p::first-letter {
+    margin-bottom: 32px;
   }
 }
 
@@ -273,10 +276,10 @@ blockquote:before {
   width: 100%;
   height: 100%;
   border-radius: 60px;
-  background-color: rgb(186, 120, 253);
+  background-color: var(--accent-default);
   opacity: 0.6;
   content: "";
-  transition: 0.5s;
+  transition: 0.3s;
 }
 
 .glass-button-cta:enabled:hover::before {
